# ros-central-registry

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  distribution.txt  index.html  requirements.in  requirements.txt
docs/: BUILD.bazel  docs_runner.py  sphinx_build.py
docs/modules/action_msgs/: metadata.json
docs/modules/ament_cmake_version/: metadata.json
docs/modules/ament_index_cpp/: metadata.json
docs/modules/class_loader/: metadata.json
docs/modules/console_bridge_vendor/: metadata.json
docs/modules/fastdds/: metadata.json
docs/modules/geometry_msgs/: metadata.json
docs/modules/iceoryx/: metadata.json
docs/modules/launch_yaml/: metadata.json
docs/modules/libstatistics_collector/: metadata.json
docs/modules/liburcu/: metadata.json
docs/modules/osrf_pycommon/: metadata.json
docs/modules/performance_test_fixture/: metadata.json
docs/modules/rcl_yaml_param_parser/: metadata.json
docs/modules/rmw/: metadata.json
docs/modules/rmw_cyclonedds_cpp/: metadata.json
docs/modules/ros_environment/: metadata.json
docs/modules/ros_testing/: metadata.json
docs/modules/rosidl_dynamic_typesupport/: metadata.json
docs/modules/rosidl_runtime_py/: metadata.json
docs/modules/rti_connext_dds_cmake_module/: metadata.json
docs/modules/sros2/: metadata.json
docs/modules/test_interface_files/: metadata.json
docs/modules/zenoh-cpp/: metadata.json
docs/source/: alternatives.rst  conf.py  design_choices.rst  developer_guide.rst  examples.rst  index.rst  motivation.rst  overview.rst  questions.rst  quick_start.rst  release_process.rst  survey_of_alternate_approaches.rst  why_bazel.rst
docs/source/_static/: custom.css
example/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
example/msg/: ExampleMessage.msg
example/patches/: ament_index_cpp-macos-path-limits.patch  fastdds-macos-framework-linkopts.patch  rcutils-macos-strerror-r.patch  rosidl_adapter-filter-none-dynamic-libs.patch
example/ros/: example_ros_publisher.cc  example_ros_publisher.py  example_ros_subscriber.cc  example_ros_subscriber.py
modules/action_msgs/: BUILD.bazel  MODULE.bazel
modules/action_msgs/0.0.0/: MODULE.bazel  source.json
modules/action_msgs/2.4.2/: MODULE.bazel  source.json
modules/action_msgs/2.4.2.rcr.0/: MODULE.bazel
modules/action_msgs/2.4.2.rcr.1/: MODULE.bazel  source.json
modules/action_msgs/2.4.4/: MODULE.bazel  source.json
modules/action_msgs/2.4.4.rcr.0/: MODULE.bazel  source.json
modules/geometry_msgs/: BUILD.bazel  MODULE.bazel
modules/geometry_msgs/0.0.0/: MODULE.bazel  source.json
modules/geometry_msgs/5.8.1/: MODULE.bazel  source.json
modules/geometry_msgs/5.9.1/: MODULE.bazel  source.json
modules/geometry_msgs/5.9.1.rcr.0/: MODULE.bazel
modules/geometry_msgs/5.9.1.rcr.1/: MODULE.bazel  source.json
modules/geometry_msgs/5.9.2/: MODULE.bazel  source.json
modules/geometry_msgs/5.9.2.rcr.0/: MODULE.bazel  source.json
modules/rcl_interfaces/: BUILD.bazel  MODULE.bazel
modules/rcl_interfaces/0.0.0/: MODULE.bazel  source.json
modules/rcl_interfaces/2.4.2/: MODULE.bazel
modules/rcl_interfaces/2.4.2.rcr.0/: MODULE.bazel  source.json
modules/rcl_interfaces/2.4.2.rcr.1/: MODULE.bazel  source.json
modules/rcl_interfaces/2.4.4/: MODULE.bazel  source.json
modules/rcl_interfaces/2.4.4.rcr.0/: MODULE.bazel  source.json
modules/rcpputils/: BUILD.bazel  MODULE.bazel  metadata.json
modules/rcpputils/0.0.0/: MODULE.bazel  source.json
modules/rcpputils/2.14.2/: MODULE.bazel  source.json
modules/rcpputils/2.14.3/: MODULE.bazel
modules/rcpputils/2.14.3.rcr.0/: MODULE.bazel  source.json
modules/rcpputils/2.14.3.rcr.1/: MODULE.bazel  source.json
modules/rcpputils/2.14.4/: MODULE.bazel  source.json
modules/rcpputils/2.14.4.rcr.0/: MODULE.bazel  source.json
modules/rcutils/: BUILD.bazel  MODULE.bazel  metadata.json
modules/rcutils/0.0.0/: MODULE.bazel  source.json
modules/rcutils/7.0.0/: source.json
modules/rcutils/7.0.5/: MODULE.bazel
modules/rcutils/7.0.5.rcr.0/: MODULE.bazel  source.json
modules/rcutils/7.0.5.rcr.1/: MODULE.bazel  source.json
modules/rcutils/7.0.9/: MODULE.bazel  source.json
modules/rcutils/7.0.9.rcr.0/: MODULE.bazel  source.json
modules/rmw/: BUILD.bazel  MODULE.bazel
modules/rmw/0.0.0/: MODULE.bazel  source.json
modules/rmw/7.10.1/: MODULE.bazel  source.json
modules/rmw/7.10.1.rcr.0/: MODULE.bazel  source.json
modules/rmw/7.9.0/: MODULE.bazel  (+1 more)
modules/rmw_dds_common/: BUILD.bazel  MODULE.bazel  metadata.json
modules/rmw_fastrtps_cpp/: BUILD.bazel  MODULE.bazel  metadata.json
modules/rmw_implementation/: BUILD.bazel  MODULE.bazel  metadata.json
modules/ros2cli_test_interfaces/: BUILD.bazel  MODULE.bazel
modules/rosidl_adapter/: BUILD.bazel  MODULE.bazel  aspects.bzl  defs.bzl  rules.bzl  tools.bzl  types.bzl
modules/rosidl_cli/: BUILD.bazel  MODULE.bazel
modules/rosidl_generator_py/: BUILD.bazel  MODULE.bazel  defs.bzl  metadata.json
modules/rosidl_runtime_c/: BUILD.bazel  MODULE.bazel
modules/rosidl_runtime_py/: BUILD.bazel  MODULE.bazel  metadata.json
modules/rosidl_runtime_rs/: BUILD.bazel  MODULE.bazel
modules/rosidl_typesupport_c/: BUILD.bazel  MODULE.bazel  aspects.bzl  metadata.json
modules/rosidl_typesupport_cpp/: BUILD.bazel  MODULE.bazel  aspects.bzl  metadata.json
modules/sensor_msgs/: BUILD.bazel  MODULE.bazel
modules/std_msgs/: BUILD.bazel  MODULE.bazel
modules/test_msgs/: BUILD.bazel  MODULE.bazel
modules/tf2_msgs/: BUILD.bazel  MODULE.bazel
modules/type_description_interfaces/: BUILD.bazel  MODULE.bazel
ros/: MODULE.bazel  defs.bzl
ros/cc/: defs.bzl
ros/python/: BUILD.bazel  defs.bzl
ros/ros/: package.bzl
tools/: BUILD.bazel  helper_interface_autogen.py  helper_strip_starlark_files.py  interface_autogen.py  manage_submodules.py  push_submodule_changes.py  registry_scraper_data.yaml  registry_scraper_tool.py  release_bootstrap.py  release_migrate.py  ubuntu_python_packages.py  workspace_patch.py  workspace_revert.py  workspace_setup.py
tools/bazelflore/: main.py
(+14052 files in other folders)
