
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rosidl_adapter//:defs.bzl", "idl_ros_library")
load("@rosidl_adapter_proto//:defs.bzl", "proto_ros_library")
load("@rosidl_generator_type_description//:defs.bzl", "type_description_ros_library")
load("@rosidl_generator_c//:defs.bzl", "c_ros_library")
load("@rosidl_generator_cpp//:defs.bzl", "cc_ros_library")
load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

# Intermediary artifact examples

idl_ros_library(
    name = "example_ros_idl",
    deps = [
        "@std_msgs//:msg__String",
        "@geometry_msgs//:msg__PoseStamped",
        "@ros2cli_test_interfaces//:msg__ShortVariedMultiNested",
        "@ros2cli_test_interfaces//:srv__ShortVariedMultiNested",
        "@ros2cli_test_interfaces//:action__ShortVariedMultiNested"
    ],
)

type_description_ros_library(
    name = "example_ros_type_description",
    deps = [
        "@std_msgs//:msg__String",
        "@geometry_msgs//:msg__PoseStamped",
        "@ros2cli_test_interfaces//:msg__ShortVariedMultiNested",
        "@ros2cli_test_interfaces//:srv__ShortVariedMultiNested",
        "@ros2cli_test_interfaces//:action__ShortVariedMultiNested"
    ],
)

# Protobuf examples

proto_ros_library(
    name = "example_ros_proto",
    deps = [
        "@sensor_msgs//:msg__CompressedImage",
    ]
)

# C examples

c_ros_library(
    name = "example_ros_c_msgs",
    deps = [
        "@sensor_msgs//:msg__CompressedImage",
    ],
)

cc_binary(
    name = "example_ros_c",
    srcs = ["src/example_ros.c"],
    deps = [":example_ros_c_msgs"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "example_proto_c",
    srcs = ["src/example_proto.c"],
    deps = [":example_ros_c_msgs"],
    visibility = ["//visibility:public"],
)

# C++ examples

cc_ros_library(
    name = "example_ros_cc_msgs",
    deps = [
        "@sensor_msgs//:msg__CompressedImage",
    ],
)

cc_binary(
    name = "example_ros_cc",
    srcs = ["src/example_ros.cc"],
    deps = [":example_ros_cc_msgs"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "example_proto_cc",
    srcs = ["src/example_proto.cc"],
    deps = [":example_ros_cc_msgs"],
    visibility = ["//visibility:public"],
)