
# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")

load("@rosidl_adapter//:rules.bzl", "idl_ros_library")
load("@rosidl_adapter_proto//:rules.bzl", "proto_ros_library")
load("@rosidl_generator_type_description//:rules.bzl", "type_description_ros_library")
load("@rosidl_generator_c//:rules.bzl", "c_ros_library")
load("@rosidl_generator_cpp//:rules.bzl", "cc_ros_library")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(default_visibility = ["//visibility:public"])

# Intermediary artifact examples

idl_ros_library(
    name = "example_ros_idl",
    deps = [
        "@std_msgs//:msg__String",
        "@geometry_msgs//:msg__PoseStamped",
        "@ros2cli_test_interfaces//:msg__ShortVariedMultiNested",
        "@ros2cli_test_interfaces//:srv__ShortVariedMultiNested",
        "@ros2cli_test_interfaces//:action__ShortVariedMultiNested"
    ],
)

type_description_ros_library(
    name = "example_ros_type_description",
    deps = [
        "@std_msgs//:msg__String",
        "@geometry_msgs//:msg__PoseStamped",
        "@ros2cli_test_interfaces//:msg__ShortVariedMultiNested",
        "@ros2cli_test_interfaces//:srv__ShortVariedMultiNested",
        "@ros2cli_test_interfaces//:action__ShortVariedMultiNested"
    ],
)

# C examples

c_ros_library(
    name = "example_ros_c_msgs",
    deps = [
        "@sensor_msgs//:msg__CompressedImage",
        "@std_msgs//:msg__String",
        "@rcl_interfaces//:srv__SetLoggerLevels",
    ],
)

cc_binary(
    name = "example_ros_c",
    srcs = ["src/example_ros.c"],
    deps = [":example_ros_c_msgs"],
)

cc_binary(
    name = "example_ros_publisher_c",
    srcs = ["src/example_ros_publisher.c"],
    deps = [
        "@rcl",
        ":example_ros_c_msgs"
    ],
)

cc_binary(
    name = "example_ros_subscriber_c",
    srcs = ["src/example_ros_subscriber.c"],
    deps = [
        "@rcl",
        ":example_ros_c_msgs"
    ],
)

alias(
    name = "example_ros_node_c",
    actual = ":example_ros_publisher_c",
)


# C++ examples (note that cc_ros_library includes proto type support)

cc_ros_library(
    name = "example_ros_cc_msgs",
    deps = [
        "@sensor_msgs//:msg__CompressedImage",
        "@std_msgs//:msg__String",
    ],
)

cc_binary(
    name = "example_ros_cc",
    srcs = ["src/example_ros.cc"],
    deps = [":example_ros_cc_msgs"],
)

cc_binary(
    name = "example_ros_publisher_cc",
    srcs = ["src/example_ros_publisher.cc"],
    deps = [
        "@rclcpp",
        ":example_ros_cc_msgs"
    ],
)

cc_binary(
    name = "example_ros_subscriber_cc",
    srcs = ["src/example_ros_subscriber.cc"],
    deps = [
        "@rclcpp",
        ":example_ros_cc_msgs"
    ],
)

alias(
    name = "example_ros_node_cc",
    actual = ":example_ros_publisher_cc",
)

# cc_binary(
#     name = "example_ros_proto_cc",
#     srcs = ["src/example_ros_proto.cc"],
#     deps = [":example_ros_cc_msgs"],
# )


# Protobuf pipeline

proto_ros_library(
    name = "example_proto",
    deps = [
        "@sensor_msgs//:msg__CompressedImage",
    ]
)

cc_proto_library(
    name = "example_proto_cc_msgs",
    deps = [":example_proto"],
)

cc_binary(
    name = "example_proto_cc",
    srcs = ["src/example_proto.cc"],
    deps = [":example_proto_cc_msgs"],
)

# TF2 examples

proto_ros_library(
    name = "example_tf2_proto",
    deps = [
        "@tf2_msgs//:msg__TFMessage",
    ],
)
