# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rosidl_adapter//:rules.bzl", "idl_ros_library")
load("@rosidl_adapter_proto//:rules.bzl", "proto_ros_library")
load("@rosidl_generator_c//:rules.bzl", "c_ros_library")
load("@rosidl_generator_cpp//:rules.bzl", "cc_ros_library")
load("@rosidl_generator_py//:rules.bzl", "py_ros_library")
load("@rosidl_generator_type_description//:rules.bzl", "type_description_ros_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

# Intermediary artifact examples

idl_ros_library(
    name = "example_ros_idl",
    deps = [
        "@geometry_msgs//msg:PoseStamped",
        "@ros2cli_test_interfaces//action:ShortVariedMultiNested",
        "@ros2cli_test_interfaces//msg:ShortVariedMultiNested",
        "@ros2cli_test_interfaces//srv:ShortVariedMultiNested",
        "@std_msgs//msg:String",
    ],
)

type_description_ros_library(
    name = "example_ros_type_description",
    deps = [
        "@geometry_msgs//msg:PoseStamped",
        "@ros2cli_test_interfaces//action:ShortVariedMultiNested",
        "@ros2cli_test_interfaces//msg:ShortVariedMultiNested",
        "@ros2cli_test_interfaces//srv:ShortVariedMultiNested",
        "@std_msgs//msg:String",
    ],
)

# C examples

c_ros_library(
    name = "example_ros_c_msgs",
    deps = [
        "@rcl_interfaces//srv:SetLoggerLevels",
        "@sensor_msgs//msg:CompressedImage",
        "@std_msgs//msg:String",
    ],
)

cc_binary(
    name = "example_ros_c",
    srcs = ["src/example_ros.c"],
    deps = [":example_ros_c_msgs"],
)

cc_binary(
    name = "example_ros_publisher_c",
    srcs = ["src/example_ros_publisher.c"],
    deps = [
        ":example_ros_c_msgs",
        "@rcl",
    ],
)

cc_binary(
    name = "example_ros_subscriber_c",
    srcs = ["src/example_ros_subscriber.c"],
    deps = [
        ":example_ros_c_msgs",
        "@rcl",
    ],
)

alias(
    name = "example_ros_node_c",
    actual = ":example_ros_publisher_c",
)

# C++ examples (note that cc_ros_library includes proto type support)

cc_ros_library(
    name = "example_ros_cc_msgs",
    deps = [
        "@sensor_msgs//msg:CompressedImage",
        "@std_msgs//msg:String",
    ],
)

cc_binary(
    name = "example_ros_cc",
    srcs = ["src/example_ros.cc"],
    deps = [":example_ros_cc_msgs"],
)

cc_binary(
    name = "example_ros_publisher_cc",
    srcs = ["src/example_ros_publisher.cc"],
    deps = [
        ":example_ros_cc_msgs",
        "@rclcpp",
    ],
)

cc_binary(
    name = "example_ros_subscriber_cc",
    srcs = ["src/example_ros_subscriber.cc"],
    deps = [
        ":example_ros_cc_msgs",
        "@rclcpp",
    ],
)

alias(
    name = "example_ros_node_cc",
    actual = ":example_ros_publisher_cc",
)

cc_binary(
    name = "example_ros_proto_publisher_cc",
    srcs = ["src/example_ros_proto_publisher.cc"],
    deps = [
        ":example_ros_cc_msgs",
        "@rclcpp",
    ],
)

cc_binary(
    name = "example_ros_proto_subscriber_cc",
    srcs = ["src/example_ros_proto_subscriber.cc"],
    deps = [
        ":example_ros_cc_msgs",
        "@rclcpp",
    ],
)

# Python

py_ros_library(
    name = "example_ros_py_msgs",
    deps = [
        "@sensor_msgs//msg:CompressedImage",
    ],
)

py_binary(
    name = "example_ros_py",
    srcs = ["src/example_ros.py"],
    main = "src/example_ros.py",
    deps = [":example_ros_py_msgs"],
)

# Protobuf pipeline

proto_ros_library(
    name = "example_proto",
    deps = [
        "@sensor_msgs//msg:CompressedImage",
    ],
)

cc_proto_library(
    name = "example_proto_cc_msgs",
    deps = [":example_proto"],
)

cc_binary(
    name = "example_proto_cc",
    srcs = ["src/example_proto.cc"],
    deps = [":example_proto_cc_msgs"],
)

# TF2 examples

proto_ros_library(
    name = "example_tf2_proto",
    deps = [
        "@tf2_msgs//msg:TFMessage",
    ],
)
