# Copyright 2025 Open Source Robotics Foundation, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "bazel_ros_demo",
    version = "0.0.0",
    compatibility_level = 1,
)

# System

bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")
bazel_dep(name = "protobuf", version = "32.0")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_python", version = "1.5.1")
bazel_dep(name = "rules_rust", version = "0.63.0")

# Third party

bazel_dep(name = "fastdds", version = "3.2.2")
bazel_dep(name = "liburcu", version = "0.0.0")
bazel_dep(name = "lttng-ust", version = "0.0.0")
bazel_dep(name = "mimick", version = "0.0.0")
bazel_dep(name = "zenoh-c", version = "0.0.0")
bazel_dep(name = "zenoh-cpp", version = "0.0.0")

# ROS

bazel_dep(name = "ament_index_cpp", version = "0.0.0")
bazel_dep(name = "ament_index_python", version = "0.0.0")
bazel_dep(name = "libstatistics_collector", version = "0.0.0")
bazel_dep(name = "osrf_testing_tools_cpp", version = "0.0.0")
bazel_dep(name = "performance_test_fixture", version = "0.0.0")
bazel_dep(name = "rcl", version = "0.0.0")
bazel_dep(name = "rcl_interfaces", version = "0.0.0")
bazel_dep(name = "rcl_logging_interface", version = "0.0.0")
bazel_dep(name = "rcl_logging_spdlog", version = "0.0.0")
bazel_dep(name = "rcl_yaml_param_parser", version = "0.0.0")
bazel_dep(name = "rclcpp", version = "0.0.0")
bazel_dep(name = "rcutils", version = "0.0.0")
bazel_dep(name = "rcpputils", version = "0.0.0")
bazel_dep(name = "rpyutils", version = "0.0.0")
bazel_dep(name = "ros", version = "0.0.0")
bazel_dep(name = "rosidl_adapter", version = "0.0.0")
bazel_dep(name = "rosidl_adapter_proto", version = "0.0.0")
bazel_dep(name = "rosidl_cli", version = "0.0.0")
bazel_dep(name = "rosidl_dynamic_typesupport", version = "0.0.0")
bazel_dep(name = "rosidl_dynamic_typesupport_fastrtps", version = "0.0.0")
bazel_dep(name = "rosidl_generator_c", version = "0.0.0")
bazel_dep(name = "rosidl_generator_cpp", version = "0.0.0")
bazel_dep(name = "rosidl_generator_type_description", version = "0.0.0")
bazel_dep(name = "rosidl_parser", version = "0.0.0")
bazel_dep(name = "rosidl_pycommon", version = "0.0.0")
bazel_dep(name = "rosidl_runtime_c", version = "0.0.0")
bazel_dep(name = "rosidl_runtime_cpp", version = "0.0.0")
bazel_dep(name = "rosidl_runtime_py", version = "0.0.0")
bazel_dep(name = "rosidl_typesupport_interface", version = "0.0.0")
bazel_dep(name = "rosidl_typesupport_c", version = "0.0.0")
bazel_dep(name = "rosidl_typesupport_cpp", version = "0.0.0")
bazel_dep(name = "rosidl_typesupport_fastrtps_c", version = "0.0.0")
bazel_dep(name = "rosidl_typesupport_fastrtps_cpp", version = "0.0.0")
bazel_dep(name = "rosidl_typesupport_introspection_c", version = "0.0.0")
bazel_dep(name = "rosidl_typesupport_introspection_cpp", version = "0.0.0")
bazel_dep(name = "rosidl_typesupport_protobuf", version = "0.0.0")
bazel_dep(name = "rosidl_typesupport_protobuf_c", version = "0.0.0")
bazel_dep(name = "rosidl_typesupport_protobuf_cpp", version = "0.0.0")
bazel_dep(name = "rmw", version = "0.0.0")
bazel_dep(name = "rmw_security_common", version = "0.0.0")
bazel_dep(name = "rmw_dds_common", version = "0.0.0")
bazel_dep(name = "rmw_fastrtps_cpp", version = "0.0.0")
bazel_dep(name = "rmw_fastrtps_shared_cpp", version = "0.0.0")
bazel_dep(name = "rmw_implementation", version = "0.0.0")
bazel_dep(name = "tracetools", version = "0.0.0")

bazel_dep(name = "action_msgs", version = "2.4.1")
bazel_dep(name = "builtin_interfaces", version = "2.4.1")
bazel_dep(name = "geometry_msgs", version = "5.8.1")
bazel_dep(name = "ros2cli_test_interfaces", version = "0.39.2")
bazel_dep(name = "rosgraph_msgs", version = "5.8.1")
bazel_dep(name = "sensor_msgs", version = "5.8.1")
bazel_dep(name = "service_msgs", version = "2.4.1")
bazel_dep(name = "statistics_msgs", version = "5.8.1")
bazel_dep(name = "std_msgs", version = "5.8.1")
bazel_dep(name = "std_srvs", version = "5.8.1")
bazel_dep(name = "test_interface_files", version = "0.14.1")
bazel_dep(name = "test_msgs", version = "2.4.1")
bazel_dep(name = "tf2_msgs", version = "0.44.0")
bazel_dep(name = "type_description_interfaces", version = "2.4.1")
bazel_dep(name = "unique_identifier_msgs", version = "2.8.0")

# Overrides

local_path_override(module_name = "liburcu", path = "./thirdparty/liburcu")
local_path_override(module_name = "lttng-ust", path = "./thirdparty/lttng-ust")
local_path_override(module_name = "mimick", path = "./thirdparty/mimick")
local_path_override(module_name = "zenoh-c", path = "./thirdparty/zenoh-c")
local_path_override(module_name = "zenoh-cpp", path = "./thirdparty/zenoh-cpp")

local_path_override(module_name = "ament_index_cpp", path = "./modules/ament_index_cpp")
local_path_override(module_name = "ament_index_python", path = "./modules/ament_index_python")
local_path_override(module_name = "libstatistics_collector", path = "./modules/libstatistics_collector")
local_path_override(module_name = "osrf_testing_tools_cpp", path = "./modules/osrf_testing_tools_cpp")
local_path_override(module_name = "performance_test_fixture", path = "./modules/performance_test_fixture")
local_path_override(module_name = "rcl", path = "./modules/rcl")
local_path_override(module_name = "rcl_interfaces", path = "./modules/rcl_interfaces")
local_path_override(module_name = "rcl_logging_interface", path = "./modules/rcl_logging_interface")
local_path_override(module_name = "rcl_logging_spdlog", path = "./modules/rcl_logging_spdlog")
local_path_override(module_name = "rcl_yaml_param_parser", path = "./modules/rcl_yaml_param_parser")
local_path_override(module_name = "rclcpp", path = "./modules/rclcpp")
local_path_override(module_name = "rcutils", path = "./modules/rcutils")
local_path_override(module_name = "rcpputils", path = "./modules/rcpputils")
local_path_override(module_name = "rpyutils", path = "./modules/rpyutils")
local_path_override(module_name = "ros", path = "./modules/ros")
local_path_override(module_name = "rosidl_adapter", path = "./modules/rosidl_adapter")
local_path_override(module_name = "rosidl_adapter_proto", path = "./modules/rosidl_adapter_proto")
local_path_override(module_name = "rosidl_cli", path = "./modules/rosidl_cli")
local_path_override(module_name = "rosidl_dynamic_typesupport", path = "./modules/rosidl_dynamic_typesupport")
local_path_override(module_name = "rosidl_dynamic_typesupport_fastrtps", path = "./modules/rosidl_dynamic_typesupport_fastrtps")
local_path_override(module_name = "rosidl_generator_c", path = "./modules/rosidl_generator_c")
local_path_override(module_name = "rosidl_generator_cpp", path = "./modules/rosidl_generator_cpp")
local_path_override(module_name = "rosidl_generator_type_description", path = "./modules/rosidl_generator_type_description")
local_path_override(module_name = "rosidl_parser", path = "./modules/rosidl_parser")
local_path_override(module_name = "rosidl_pycommon", path = "./modules/rosidl_pycommon")
local_path_override(module_name = "rosidl_runtime_c", path = "./modules/rosidl_runtime_c")
local_path_override(module_name = "rosidl_runtime_cpp", path = "./modules/rosidl_runtime_cpp")
local_path_override(module_name = "rosidl_runtime_py", path = "./modules/rosidl_runtime_py")
local_path_override(module_name = "rosidl_typesupport_interface", path = "./modules/rosidl_typesupport_interface")
local_path_override(module_name = "rosidl_typesupport_c", path = "./modules/rosidl_typesupport_c")
local_path_override(module_name = "rosidl_typesupport_cpp", path = "./modules/rosidl_typesupport_cpp")
local_path_override(module_name = "rosidl_typesupport_fastrtps_c", path = "./modules/rosidl_typesupport_fastrtps_c")
local_path_override(module_name = "rosidl_typesupport_fastrtps_cpp", path = "./modules/rosidl_typesupport_fastrtps_cpp")
local_path_override(module_name = "rosidl_typesupport_introspection_c", path = "./modules/rosidl_typesupport_introspection_c")
local_path_override(module_name = "rosidl_typesupport_introspection_cpp", path = "./modules/rosidl_typesupport_introspection_cpp")
local_path_override(module_name = "rosidl_typesupport_protobuf", path = "./modules/rosidl_typesupport_protobuf")
local_path_override(module_name = "rosidl_typesupport_protobuf_c", path = "./modules/rosidl_typesupport_protobuf_c")
local_path_override(module_name = "rosidl_typesupport_protobuf_cpp", path = "./modules/rosidl_typesupport_protobuf_cpp")
local_path_override(module_name = "rmw", path = "./modules/rmw")
local_path_override(module_name = "rmw_security_common", path = "./modules/rmw_security_common")
local_path_override(module_name = "rmw_dds_common", path = "./modules/rmw_dds_common")
local_path_override(module_name = "rmw_implementation", path = "./modules/rmw_implementation")
local_path_override(module_name = "rmw_fastrtps_cpp", path = "./modules/rmw_fastrtps_cpp")
local_path_override(module_name = "rmw_fastrtps_shared_cpp", path = "./modules/rmw_fastrtps_shared_cpp")
local_path_override(module_name = "tracetools", path = "./modules/tracetools")

local_path_override(module_name = "action_msgs", path = "./modules/action_msgs")
local_path_override(module_name = "builtin_interfaces", path = "./modules/builtin_interfaces")
local_path_override(module_name = "geometry_msgs", path = "./modules/geometry_msgs")
local_path_override(module_name = "ros2cli_test_interfaces", path = "./modules/ros2cli_test_interfaces")
local_path_override(module_name = "rosgraph_msgs", path = "./modules/rosgraph_msgs")
local_path_override(module_name = "sensor_msgs", path = "./modules/sensor_msgs")
local_path_override(module_name = "service_msgs", path = "./modules/service_msgs")
local_path_override(module_name = "statistics_msgs", path = "./modules/statistics_msgs")
local_path_override(module_name = "std_msgs", path = "./modules/std_msgs")
local_path_override(module_name = "std_srvs", path = "./modules/std_srvs")
local_path_override(module_name = "test_interface_files", path = "./modules/test_interface_files")
local_path_override(module_name = "test_msgs", path = "./modules/test_msgs")
local_path_override(module_name = "tf2_msgs", path = "./modules/tf2_msgs")
local_path_override(module_name = "type_description_interfaces", path = "./modules/type_description_interfaces")
local_path_override(module_name = "unique_identifier_msgs", path = "./modules/unique_identifier_msgs")

# Toolchain configuration

# This breaks cc_test: https://github.com/ziglang/zig/issues/19699
# toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
# use_repo(toolchains, "zig_sdk")
# register_toolchains(
#     "@zig_sdk//toolchain:linux_amd64_gnu.2.37",
#     "@zig_sdk//toolchain:linux_arm64_gnu.2.37",
# )

# Python configuration

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
)